--- a/FX.SalesProcess.Tests/FX.SalesProcess.Tests.csproj
+++ b/FX.SalesProcess.Tests/FX.SalesProcess.Tests.csproj
@@ -31,6 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Sublogix">
+      <HintPath>..\References\Sublogix.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -42,6 +45,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Global.cs" />
+    <Compile Include="ProcessPluginTests.cs" />
     <Compile Include="SalesProcessAdapterTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
