--- a/FX.SalesProcess/packages.config
+++ b/FX.SalesProcess/packages.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Sublogix" version="1.2.0.0" />
+  <package id="Sublogix" version="1.4.0.0" targetFramework="net4" />
 </packages>
